--- a/jknbf/jknbf.csproj
+++ b/jknbf/jknbf.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="login.html" />
     <Content Include="packages.config" />
     <Content Include="Content\css\bootstrap-theme.css.map" />
     <Content Include="Content\css\bootstrap.css.map" />
