added data save server side and ajax post

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\jk.NBF\packages.config" />
   <repository path="..\jknbf\packages.config" />
 </repositories>
