--- a/jk.NBF/jk.NBF.csproj
+++ b/jk.NBF/jk.NBF.csproj
@@ -39,6 +39,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -61,6 +64,7 @@
     <Content Include="Content\css\bootstrap-theme.css.map" />
     <Content Include="Content\css\bootstrap.css.map" />
     <Content Include="Content\js\lib\head.min.js.map" />
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -90,12 +94,23 @@
     <Content Include="Content\js\lib\URI.js" />
     <Content Include="Content\js\lib\URI.min.js" />
     <None Include="Content\js\_references.js" />
+    <Content Include="data\SaveDocument.aspx" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
     <Content Include="login.html" />
+    <Content Include="Saved.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="data\DataAccess.cs" />
+    <Compile Include="data\DataAccessException.cs" />
+    <Compile Include="data\SaveDocument.aspx.cs">
+      <DependentUpon>SaveDocument.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="data\SaveDocument.aspx.designer.cs">
+      <DependentUpon>SaveDocument.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
