--- a/jk.NBF/bin/jk.NBF.dll.config
+++ b/jk.NBF/bin/jk.NBF.dll.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+  <connectionStrings>
+    <add name="default" connectionString="Data Source=(local);Initial Catalog=Forms;Integrated Security=True;Pooling=False"/>
+  </connectionStrings>
   <appSettings>
     <add key=""/>
     
